--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
 beautifulsoup4==4.10.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 decorator==5.1.0
 Django==3.2.9
 django-bootstrap-v5==1.0.7
+django-debug-toolbar==3.2.2
 django-extensions==3.1.5
+idna==3.3
 ipython==7.29.0
 jedi==0.18.1
 matplotlib-inline==0.1.3
@@ -16,7 +20,9 @@ prompt-toolkit==3.0.22
 ptyprocess==0.7.0
 Pygments==2.10.0
 pytz==2021.3
+requests==2.26.0
 soupsieve==2.3.1
 sqlparse==0.4.2
 traitlets==5.1.1
+urllib3==1.26.7
 wcwidth==0.2.5
