--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==3.2.9
 django-bootstrap-v5==1.0.7
 django-debug-toolbar==3.2.2
 django-extensions==3.1.5
+gunicorn==20.1.0
 idna==3.3
 ipython==7.29.0
 jedi==0.18.1
@@ -16,6 +17,7 @@ matplotlib-inline==0.1.3
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
 prompt-toolkit==3.0.22
 ptyprocess==0.7.0
 Pygments==2.10.0
